Fix text overlap issue with checkboxes
Some multi-checkbox fields had their checkboxes overlap with the
label text. This commit right aligns those checkboxes to make
space for the label text.

modified: css/dxpr-theme.admin.themesettings.css
modified: scss/dxpr-theme.admin.themesettings.scss

--- a/scss/dxpr-theme.admin.themesettings.scss
+++ b/scss/dxpr-theme.admin.themesettings.scss
@@ -93,7 +93,7 @@ $border-color: #222330;
       opacity: .7;
     }
   }
-  label:not(.option),
+  label,
   legend {
     width: 200px;
     float: left;
